test/spec_vectors/store/fail/module_23.wat
(module (memory 1) (func $type-address-empty-in-then (i32.const 0) (i32.const 0) (if (then (i32.store)))))